import java.awt.image.BufferedImage;

public class Icon {
    public BufferedImage image;

    public Icon() {
        this.image = null;
    }

    public void setImage(BufferedImage image) {
        this.image = image;
    }
}
